--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
     margin: 0;
     font-family: 'Montserrat', sans-serif;
 }
 
 .header{
+    position: relative;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -35,4 +40,79 @@ body{
     letter-spacing: 0.2em;
     text-transform: uppercase;
     color: #fff;
+}
+
+.header__arrow{
+    display: block;
+    width: 48px;
+    height: 48px;
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: all 0.2s ease-in;
+}
+
+.header__arrow:hover{
+    transform: translate(-50%, -15px);
+}
+
+.container{
+    margin: 0 auto;
+    width: 1110px;
+    height: 600px;
+}
+
+.portfolio{
+    padding-top: 80px;
+    padding-bottom: 120px;
+}
+
+.section__title{
+    margin: 0;
+    font-weight: bold;
+    font-size: 46px;
+    line-height: 1.3;
+    text-align: center;
+    color: #000;
+    margin-bottom: 70px;
+}
+
+.portfolio__cards__wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.portfolio__card{
+    margin-bottom: 30px;
+    width: 540px;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0px 10px 40px rgba(126, 155, 189, 0.35);
+}
+
+.portfolio__card:nth-last-child(2),
+.portfolio__card:last-child{
+    margin-bottom: 0;
+}
+
+.portfolio__card__img{
+    margin-bottom: 20px;
+}
+
+.portfolio__card__title{
+    margin: 0;
+    margin-bottom: 13px;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 1.3;
+    color: #000;
+}
+
+.portfolio__card p{
+    margin: 0;
+    font-size: 16px;
+    line-height: 1.3;
+    color: #000;
 }
