--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,9 @@ body{
 
 .container{
     margin: 0 auto;
-    width: 1110px;
-    height: 600px;
+    max-width: 1140px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .portfolio{
@@ -86,7 +87,7 @@ body{
 
 .portfolio__card{
     margin-bottom: 30px;
-    width: 540px;
+    max-width: 540px;
     padding: 20px;
     background-color: #fff;
     box-shadow: 0px 10px 40px rgba(126, 155, 189, 0.35);
@@ -99,6 +100,7 @@ body{
 
 .portfolio__card__img{
     margin-bottom: 20px;
+    width: 100%;
 }
 
 .portfolio__card__title{
@@ -115,4 +117,192 @@ body{
     font-size: 16px;
     line-height: 1.3;
     color: #000;
+}
+
+.footer{
+    padding-top: 40px;
+    padding-bottom: 134px;
+    background-color: #1e4776;
+    color: #fff;
+}
+
+.footer__row{
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__copyright{
+    color: #7e9ec9;
+    flex-shrink: 0;
+    max-width: 350px;
+}
+
+.footer__copyright__name {
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 1.3;
+}
+
+.footer__copyright p{
+    margin: 15px 0 0 0;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.3;
+}
+
+.footer__socials{
+    padding-top: 10px;
+    flex-shrink: 0;
+    max-width: 350px;
+}
+
+.footer__socials p{
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.3;
+    color: #fff;
+    margin: 0 0 15px 0;
+}
+
+.footer__socials__list{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+}
+
+.footer__socials__item{
+    width: 30px;
+    text-align: center;
+    margin-right: 30px;
+}
+
+.footer__socials__item:last-child{
+    margin-right: 0;
+}
+
+.footer__contacts{
+    flex-shrink: 0;
+    flex-grow: 0;
+    max-width: 353px;
+}
+
+.footer__button--vk{
+    display: inline-block;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.3;
+    text-transform: uppercase;
+    color: #fff;
+
+    border: 3px solid #fff;
+    border-radius: 50px;
+    
+    text-decoration: none;
+
+    padding: 15px 30px;
+    transition: 0.3s;
+}
+
+.footer__button--vk:hover{
+    color: yellow;
+    border: 3px solid yellow;
+}
+
+.footer__contacts p{
+    color: #7e9ec9;
+    font-size: 16px;
+    line-height: 1.3;
+}
+
+.footer__socials__item--svg:hover{
+    fill: red;
+}
+
+@media (max-width: 1140px){
+    .portfolio__card{
+        width: calc( 50% - 15px );
+    }
+
+    .footer{
+        padding-top: 40px;
+        padding-bottom: 60px;
+    }
+
+    .footer__row{
+        flex-direction: column-reverse;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .footer__row > * + *{
+        margin-bottom: 50px;
+    }
+
+    .footer__socials__list{
+        justify-content: center;
+    }
+}
+
+@media (max-width: 760px){
+    .header__title{
+        font-size: 32px;
+    }
+
+    .header__subtitle{
+        font-size: 14px;
+    }
+
+    .section__title{
+        font-size: 32px;
+        margin-bottom: 30px;
+    }
+
+    .portfolio{
+        padding-top: 40px;
+        padding-bottom: 60px;
+    }
+
+    .portfolio__cards__wrapper{
+        justify-content: center;
+    }
+    
+    .portfolio__card{
+        padding: 15px;
+        width: 100%;
+    }
+
+    .portfolio__card__img{
+        margin-bottom: 10px;
+    }
+
+    .portfolio__card__title{
+        font-size: 18px;
+        margin-bottom: 10px;
+    }
+
+    .portfolio__card p{
+        font-size: 14px;
+    }
+
+    .portfolio__card:nth-last-child(2){
+        margin-bottom: 30px;
+    }
+
+    .footer__copyright__name{
+        font-size: 18px;
+        margin: 5px 0 0 0;
+    }
+
+    .footer__copyright p{
+        font-size: 14px;
+    }
+
+    .footer__socials p{
+        font-size: 14px;
+    }
+
+    .footer__contacts p{
+        font-size: 14px;
+    }
 }
