--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #1e4776;
-    background-image: url('../img/header-bg.jpg');
+    /* background-color: #1e4776;
+    background-image: url('../img/header-bg.jpg'); */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -26,7 +26,7 @@ body{
     margin: 0;
     font-weight: bold;
     font-size: 56px;
-    color: #fff;
+    color: #000;
     line-height: 1.3;
     margin-bottom: 25px;
 }
@@ -39,7 +39,7 @@ body{
     text-align: center;
     letter-spacing: 0.2em;
     text-transform: uppercase;
-    color: #fff;
+    color: #000;
 }
 
 .header__arrow{
@@ -215,8 +215,13 @@ body{
     line-height: 1.3;
 }
 
-.footer__socials__item--svg:hover{
-    fill: red;
+.svg{
+    fill:white;
+}
+
+.svg:hover{
+    /* stroke: yellow; */
+    fill: yellow;
 }
 
 @media (max-width: 1140px){
