--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,15 @@ body{
     fill: yellow;
 }
 
+.svg-arrow{
+    /* stroke: #fff; */
+    fill: rgba(0, 0, 0, 0.4);
+}
+
+.svg-arrow:hover{
+    fill: #000;
+}
+
 @media (max-width: 1140px){
     .portfolio__card{
         width: calc( 50% - 15px );
